--- a/PhotoServer/config/database.yml
+++ b/PhotoServer/config/database.yml
@@ -9,9 +9,18 @@ default: &default
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
 
+# development:
+#   <<: *default
+#   database: storage/development.sqlite3
+
 development:
-  <<: *default
-  database: storage/development.sqlite3
+  adapter: mysql2
+  encoding: utf8mb4
+  database: project_database
+  username: root
+  password: Flashlight!83
+  host: localhost
+  port: 3306
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
