--- a/PhotoServer/Gemfile
+++ b/PhotoServer/Gemfile
@@ -7,6 +7,7 @@ gem "propshaft"
 # Use sqlite3 as the database for Active Record
 gem "sqlite3", ">= 2.1"
 gem 'mysql2', '~> 0.5'
+gem 'stringio', '~> 3.1.2'
 
 # Use the Puma web server [https://github.com/puma/puma]
 gem "puma", ">= 5.0"
