--- a/PhotoServer/.vscode/launch.json
+++ b/PhotoServer/.vscode/launch.json
@@ -5,27 +5,13 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "type": "ruby_lsp",
+      "name": "Rails server",
+      "type": "Ruby",
       "request": "launch",
-      "name": "Rails Server",
-      "program": "${workspaceFolder}/config/environment.rb"
-    },
-    {
-      "type": "ruby_lsp",
-      "name": "Debug script",
-      "request": "launch",
-      "program": "ruby ${file}"
-    },
-    {
-      "type": "ruby_lsp",
-      "name": "Debug test",
-      "request": "launch",
-      "program": "ruby -Itest ${relativeFile}"
-    },
-    {
-      "type": "ruby_lsp",
-      "name": "Attach debugger",
-      "request": "attach"
+      "program": "${workspaceRoot}/bin/rails",
+      "args": [
+        "server"
+      ]
     }
   ]
 }
