--- a/PhotoServer/.vscode/launch.json
+++ b/PhotoServer/.vscode/launch.json
@@ -4,14 +4,14 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
+    
     {
       "name": "Rails server",
-      "type": "Ruby",
+      "type": "ruby",
       "request": "launch",
       "program": "${workspaceRoot}/bin/rails",
-      "args": [
-        "server"
-      ]
+      "args": ["server"],
+      "useBundler": true
     }
   ]
 }
