differing architecture yet another problem

--- a/PhotoServer/.vscode/launch.json
+++ b/PhotoServer/.vscode/launch.json
@@ -7,11 +7,10 @@
     
     {
       "name": "Rails server",
-      "type": "ruby",
+      "type": "ruby_lsp",
       "request": "launch",
       "program": "${workspaceRoot}/bin/rails",
-      "args": ["server"],
-      "useBundler": true
+      "args": ["server"]
     }
   ]
 }
