--- a/PhotoServer/Gemfile
+++ b/PhotoServer/Gemfile
@@ -46,6 +46,11 @@ gem "thruster", require: false
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
   gem "debug", platforms: %i[ mri windows ], require: "debug/prelude"
+  
+  ## these are for the debugger
+  gem "debase", "~> 0.2.8"
+  gem "ruby-debug-ide", "~> 0.7.4"
+  ## end debugger
 
   # Static analysis for security vulnerabilities [https://brakemanscanner.org/]
   gem "brakeman", require: false
@@ -57,6 +62,7 @@ end
 group :development do
   # Use console on exceptions pages [https://github.com/rails/web-console]
   gem "web-console"
+  
 end
 
 group :test do
@@ -64,3 +70,5 @@ group :test do
   gem "capybara"
   gem "selenium-webdriver"
 end
+
+
