--- a/PhotoServer/config/database.yml
+++ b/PhotoServer/config/database.yml
@@ -16,10 +16,10 @@ default: &default
 development:
   adapter: mysql2
   encoding: utf8mb4
-  database: photo_database
-  username: root
-  password: Flashlight!83
-  host: localhost
+  database: <%= ENV['MYSQL_DATABASE'] %>
+  username: <%= ENV['MYSQL_USER'] %>
+  password: <%= ENV['MYSQL_PASSWORD'] %>
+  host: <%= ENV['MYSQL_HOST'] %>
   port: 3306
 
 # Warning: The database defined as "test" will be erased and
