adding root files

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 
 MYSQL_ROOT_PASSWORD=Flashlight!83
 MYSQL_DATABASE=photo-database
-MYSQL_USER=root
+MYSQL_USER=appuser
 MYSQL_PASSWORD=Flashlight!83
 MYSQL_HOST=db
 RAILS_MASTER_KEY=a01bf8aa49e8b92edab73a1ea39eb19e
