--- a/front_end/Dockerfile.dev
+++ b/front_end/Dockerfile.dev
@@ -17,4 +17,4 @@ COPY . .
 EXPOSE 8080
 
 # Start the development server
-CMD ["npm", "run", "dev", "--", "--host"]
+CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0"]
