--- a/front_end/Dockerfile.dev
+++ b/front_end/Dockerfile.dev
@@ -17,4 +17,6 @@ COPY . .
 EXPOSE 8080
 
 # Start the development server
-CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0"]
+# CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0"]
+CMD ["sh", "-c", "npm run dev -- --host 0.0.0.0"]
+
