--- a/front_end/package.json
+++ b/front_end/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
+    "axios": "^1.8.4",
     "core-js": "^3.8.3",
+    "pinia": "^3.0.2",
     "vue": "^3.2.13"
   },
   "devDependencies": {
