--- a/PhotoServer/Gemfile
+++ b/PhotoServer/Gemfile
@@ -57,6 +57,9 @@ group :development, :test do
 
   # Omakase Ruby styling [https://github.com/rails/rubocop-rails-omakase/]
   gem "rubocop-rails-omakase", require: false
+
+  # CORS for API connectivity
+  gem "rack-cors"
 end
 
 group :development do
