--- a/front_end/package.json
+++ b/front_end/package.json
@@ -12,7 +12,8 @@
     "axios": "^1.8.4",
     "core-js": "^3.8.3",
     "pinia": "^3.0.2",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
