implemented token on backend.  next step receive and store on frontend.

--- a/PhotoServer/Gemfile
+++ b/PhotoServer/Gemfile
@@ -47,7 +47,9 @@ gem "thruster", require: false
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
   gem "debug", platforms: %i[ mri windows ], require: "debug/prelude"
-  
+  gem "dotenv-rails", groups: [:development, :test]
+
+
   ## these are for the debugger
   gem "debase", "~> 0.2.8"
   gem "ruby-debug-ide", "~> 0.7.4"
