--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,10 @@ services:
     build:
       context: ./PhotoServer
       dockerfile: Dockerfile.dev
+    working_dir: /app
     ports:
       - "3000:3000"
+      - "1234:1234"
     volumes:
       - ./PhotoServer:/rails  # Live sync Rails code in dev
       - rails_tmp:/rails/tmp  # Use named volume for tmp files
