--- a/PhotoServer/Dockerfile.dev
+++ b/PhotoServer/Dockerfile.dev
@@ -16,6 +16,10 @@ WORKDIR /rails
 RUN apt-get update -qq && apt-get install -y \
     default-libmysqlclient-dev libmariadb-dev libmariadb3
 
+# Configure bundler to install in /usr/local/bundle
+ENV BUNDLE_PATH=/usr/local/bundle
+ENV BUNDLE_APP_CONFIG=/usr/local/bundle/.bundle
+
 # install gems
 COPY Gemfile Gemfile.lock ./
 RUN bundle install
